<resources>
    <string name="app_name">DMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 标题-->
    <string name="products_browsing">商品浏览</string>
    <string name="products_detail">商品详情</string>
    <string name="shopping_cart">购物车</string>
    <string name="purchase_order">采购订单</string>
    <string name="oreder_preview">订单预览</string>
    <string name="oreder_modify">订单修改</string>
    <!-- 购物车-->
    <string name="total_price">合计</string>
    <string name="product_invalid">失效</string>
    <string name="gift">赠品</string>
    <!-- 加入购物车 -->
    <string name="supplier">供应商:  %s</string>
    <string name="pay_type">支付方式</string>
    <string name="add_to_shopping_car">加入购物车</string>
    <string name="continue_order_goods">继续订货</string>
    <string name="settle_acounts">结算(%s)</string>
    <string name="remove_invalid_products">移除失效商品</string>
    <string name="delete">删除</string>
    <!-- 订单 -->
    <string name="payment_type">付款方式</string>
    <string name="estimated_delivery_date">预计交货日期</string>
    <string name="distribution_type">配送方式：</string>
    <string name="order_brand">订单品牌：</string>
    <string name="cancel_order">订单作废</string>
    <string name="modify_order">修改订单</string>
    <string name="buy_again">再次购买</string>
    <string name="submit_order">提交订单</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="contacts">联系人</string>
    <string name="phone_number">联系电话</string>
    <string name="license_plate">车牌号</string>

</resources>
