<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42.5dp">

            <TextView
                android:id="@+id/supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/checkbox_horizontal_margin_left"
                android:drawableLeft="@mipmap/ic_shop"
                android:drawablePadding="10dp"
                android:text="哇哈哈经销商"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/product_list_margin_right"
                android:text="订单号：12345678"
                android:textColor="#333333"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/checkbox_horizontal_margin_left"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/payment_type"
                    android:textColor="#3D4245"
                    android:textSize="16sp" />

                <com.example.yuhui.dms.dmscatalogue.view.PopupTagView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    custom:popupStyle="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/estimated_delivery_date"
                    android:textColor="#3D4245"
                    android:textSize="16sp" />

                <com.example.yuhui.dms.dmscatalogue.view.PopupTagView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    custom:popupStyle="datePicker" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/distribution_type"
                    android:textColor="#3D4245"
                    android:textSize="16sp" />

                <com.example.yuhui.dms.dmscatalogue.view.TextTagView
                    android:id="@+id/distribution_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    custom:marginLeft="10pt"
                    custom:selectedStyle="icon"
                    custom:textSize="10pt"
                    custom:widthSize="40pt" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/tv_receipt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13.5dp"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginTop="13.5dp"
            android:text="商品名称：美的KFR-35GW/WPAA3\n商品编号：1298907\n商品毛重：10.5kg\n商品产地：中国大陆\n空调类别：壁挂式空调\n商品名称：美的KFR-35GW/WPAA3\n商品编号：1298907\n商品毛重：10.5kg"
            android:textAlignment="center"
            android:textColor="#666666"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_to_shopcar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="17.5dp"
                android:gravity="center"
                android:src="@drawable/right_arrow" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/products_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="17.5dp"
                android:layout_toLeftOf="@id/iv_to_shopcar"
                android:overScrollMode="never" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/checkbox_horizontal_margin_left">

            <TextView
                android:id="@+id/tv_order_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/order_brand"
                android:textColor="#333333"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/tv_order_brand_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_order_brand"
                android:textColor="#333333"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/tv_total_number_of_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="一共N件商品"
                android:textColor="#333333"
                android:textSize="10pt" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#CCCCCC" />
    </LinearLayout>

</RelativeLayout>